habits.create function first draft done - for p2 to accept only

--- a/web_app/blueprints/games/templates/games/show.html
+++ b/web_app/blueprints/games/templates/games/show.html
@@ -83,8 +83,8 @@ Your proDUCKtive war
                 </div>
             </div>
             <div class="card-footer d-flex flex-row justify-content-around">
-                <input value='Accept' type='submit' class='btn btn-primary'>
-                <input value='Decline' type='submit' class='btn btn-danger'>
+                <input name='challenge-response' value='Accept' type='submit' class='btn btn-primary'>
+                <input name='challenge-response' value='Decline' type='submit' class='btn btn-danger'>
             </div>
         </div>
     </form>
