p2 can accept challenge working

--- a/web_app/blueprints/games/templates/games/show.html
+++ b/web_app/blueprints/games/templates/games/show.html
@@ -15,21 +15,22 @@ Your proDUCKtive war
     <!-- check if user is p1 or p2 -->
     {% if active_user == 2 %}
     <form id='accept-form' action={{ url_for("habits.create", username=username, game_id=game_id)}} method="POST">
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
         <div class="card">
             <div class="card-body">
-                <h4 class='card-title'> BLAH has challenged you to a Habit War!</h4>
+                <h4 class='card-title'> {{opponent_username}} has challenged you to a Habit War!</h4>
                 <h6 class="card-subtitle text-muted">Accept or decline with the form below.</h6>
                 <hr>
                 
                 <!-- <label class='ml-auto'> Select Frequency</label> -->
                 <div class="form-row">
                     <div class="form-group col-7">
-                        <label for="habit-1-value"> Habit 1</label>
+                        <label for="habit-1-value">Habit 1</label>
                         <input id="habit-1-value" name='habit-1-value' class="form-control" type='text'>
                     </div>
                     <div class="form-group col-5">
                         <label for="habit-1-frequency">Weekly Goal</label>
-                        <select id="habit-1-frequency" name="habit-1-frequency" class="custom-select">
+                        <select form='accept-form' id="habit-1-frequency" name="habit-1-frequency" class="custom-select">
                             <option value='0' selected disabled>Choose...</option>
                             <option value='1'>1</option>
                             <option value='2'>2</option>
@@ -44,12 +45,12 @@ Your proDUCKtive war
 
                 <div class="form-row">
                     <div class="form-group col-7">
-                        <label for="habit-2-value"> Habit 2</label>
+                        <label for="habit-2-value">Habit 2</label>
                         <input id="habit-2-value" name='habit-2-value' class="form-control" type='text'>
                     </div>
                     <div class="form-group col-5">
                         <label for="habit-2-frequency">Weekly Goal</label>
-                        <select id="habit-2-frequency" name="habit-2-frequency" class="custom-select">
+                        <select form='accept-form' id="habit-2-frequency" name="habit-2-frequency" class="custom-select">
                             <option value='0' selected disabled>Choose...</option>
                             <option value='1'>1</option>
                             <option value='2'>2</option>
@@ -64,12 +65,12 @@ Your proDUCKtive war
 
                 <div class="form-row">
                     <div class="form-group col-7">
-                        <label for="habit-3-value"> Habit 3</label>
+                        <label for="habit-3-value">Habit 3</label>
                         <input id="habit-3-value" name='habit-3-value' class="form-control" type='text'>
                     </div>
                     <div class="form-group col-5">
                         <label for="habit-3-frequency">Weekly Goal</label>
-                        <select id="habit-3-frequency" name="habit-3-frequency" class="custom-select">
+                        <select form='accept-form' id="habit-3-frequency" name="habit-3-frequency" class="custom-select">
                             <option value='0' selected disabled>Choose...</option>
                             <option value='1'>1</option>
                             <option value='2'>2</option>
@@ -83,13 +84,13 @@ Your proDUCKtive war
                 </div>
             </div>
             <div class="card-footer d-flex flex-row justify-content-around">
-                <input name='challenge-response' value='Accept' type='submit' class='btn btn-primary'>
-                <input name='challenge-response' value='Decline' type='submit' class='btn btn-danger'>
+                <input form='accept-form' name='challenge-response' value='Accept' type='submit' class='btn btn-primary'>
+                <input form='accept-form' name='challenge-response' value='Decline' type='submit' class='btn btn-danger'>
             </div>
         </div>
     </form>
     {% else %}
-    <h1 id='waiting-header'>Waiting for Player 2 to accept your challenge!</h1>
+    <h1 id='waiting-header'>Waiting for {{opponent_username}} to accept your challenge!</h1>
     <img id="shuriken" src="/static/img/ninja-shuriken.png" />
     <div id="attribution-tag">Icons made by <a href="https://www.flaticon.com/authors/freepik"
             title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
@@ -156,12 +157,7 @@ Your proDUCKtive war
 
 </div>
 
-<script>
-    $("#accept-form").on('submit', (e) => {
-        e.preventDefault()
-        alert('Hello wang chun')
-    })
-</script>
+
 
 <style>
     #waiting-header {
@@ -174,7 +170,7 @@ Your proDUCKtive war
         display: block;
 
         animation-name: spinning;
-        animation-duration: 2.5s;
+        animation-duration: 8s;
         animation-iteration-count: infinite;
         animation-timing-function: linear;
     }
