--- a/web_app/blueprints/games/templates/games/index.html
+++ b/web_app/blueprints/games/templates/games/index.html
@@ -11,6 +11,8 @@ Active Games
     <div class="card rounded-lg m-2">
         <div class="card-body">
             <h3 class="card-title">{{game.player_1.username}} vs. {{game.player_2.username}}</h3>
+                        <h3 class="card-title">{{game.player_1.username}} vs. {{game.player_2.username}}</h3>
+
             <h5 class="card-subtitle mb-2 text-muted">game id: {{game.id}}</h5>
             <hr>
             <div class="d-flex flex-row justify-content-between">
