--- a/web_app/blueprints/games/templates/games/approval.html
+++ b/web_app/blueprints/games/templates/games/approval.html
@@ -7,16 +7,31 @@ Approval page
 {% block content %}
 
 <div class="card rounded-lg m-2">
+    {% for i in range(0, to_approve_length) %}
     <div class="card-body">
-        <h3 class="card-title">{{game.player_1.username}} vs. {{game.player_2.username}}</h3>
+        {# 
+        <h3 class="card-title">{{game.player_1.username}} vs. {{game.player_2.username}}</h3> 
+        #}
         <hr>
+        <div id="image-area" class="w-75 p-3 d-flex justify-content-center">
+            <img width='30%' src="{{to_approve[i].image_path}}">
+        </div>
+        <div class="card-footer d-flex flex-row-reverse">
+            <form action="{{ url_for('games.approve', username = username, game_id = game_id)}}" enctype="multipart/form-data" method="POST">
+                <input type='hidden' name="loghabit-ids" value="{{ to_approve[i].id }}">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                <input type='submit' class='btn btn-info' value="Accept">
+                <input type='button' class='btn btn-info' value="Reject">
+            </form>
+        </div>
+    </div>
+    {% endfor %}
 
-    </div>
-    <div class="card-footer d-flex flex-row-reverse">
-        <form action={{ url_for('games.show', username=username, game_id=game.id)}} method="GET">
-            <input type='submit' class='btn btn-info' value="View Game">
-        </form>
-    </div>
+
 </div>
 
 {% endblock %}
+
+{#
+    action={{ url_for('games.show', username=username, game_id=game.id)}}
+#}
