--- a/web_app/blueprints/games/templates/games/show.html
+++ b/web_app/blueprints/games/templates/games/show.html
@@ -11,6 +11,7 @@ Your proDUCKtive war
 
     <h1>Your proDUCKtivity war</h1>
 
+    <button onclick="games.show_approve()">Approve logged habit </button>
     <!-- Player 1 Habits -->
     <div id="container" class="d-flex justify-content-between">
         <div class="col-5" id="p1-habits">
@@ -18,18 +19,24 @@ Your proDUCKtive war
             <h3>Your habits</h3>
             {% for i in range(0, length_habit_list)|reverse %}
             <div class="habit">
+                {% if user_more_to_go[i] < 1 %}
+                <p> Congratulations! You don't have to {{user_habits[i].name.lower()}} again this week.</p>
+                {% else %}
                 <p>{{user_habits[i].name}}! {{user_more_to_go[i]}} more to go!</p>
+                {% endif %}
                 <div class="progress">
                     <div class="progress-bar" role="progressbar" aria-valuenow="{{rounded_progress[i]}}"
                         aria-valuemin="0" aria-valuemax="100" style="width: {{rounded_progress[i]}}%">
                     </div>
                 </div>
+                {% if user_more_to_go[i] > 0 %}
                 <form action={{ url_for('log_habits.create')}} method="POST" enctype="multipart/form-data">
                     <input name='image-for-{{user_habits[i].id}}' type="file" accept="image/*" capture="camera" value="Add photo">
                     <input name='habit-id' type='hidden' value={{user_habits[i].id}}>
                     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                     <input type="submit" value="Habit done">
                 </form>
+                {% endif %}
 
             </div>
             {% endfor %}
@@ -61,4 +68,5 @@ Your proDUCKtive war
         <h2>Battle history</h2>
     </div>
 </div>
+
 {% endblock %}
