--- a/web_app/blueprints/users/templates/users/user_profile_page.html
+++ b/web_app/blueprints/users/templates/users/user_profile_page.html
@@ -4,7 +4,7 @@
 
 <div class="row no-gutters" style="height: 100vh" >
     <div style="background-color: blue" class="col-12 col-md-6">
-        <h1>User Name Here{{current_user.username}}</h1>
+        <h1>{{current_user.username}}</h1>
         <img class="w-100" src="../../../../static/img/No-profile.jpg" alt="User Profile Picture">
     </div>
 
