--- a/web_app/templates/_layout.html
+++ b/web_app/templates/_layout.html
@@ -22,7 +22,7 @@
 
     <body>
 
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #4a6271">
             <a class="navbar-brand" href="/">
               <img src="/static/images/duck-images/duck-placeholder.png" width="30" height="30" alt="">
               Habit Wars
@@ -35,11 +35,11 @@
               <ul class="navbar-nav ml-auto">
                   <form action="#" class="form-inline my-2 my-lg-0">
                       <input id='nav-search' class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                      <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
+                      <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
                     </form>
                   {% if current_user.is_active %}
                     <li class="nav-item">
-                      <a href={{ url_for('games.index')}} class="nav-link">
+                      <a href={{ url_for('games.index', username=current_user.username)}} class="nav-link">
                         Games
                       </a>
                     </li>
