--- a/web_app/blueprints/users/templates/users/show.html
+++ b/web_app/blueprints/users/templates/users/show.html
@@ -5,7 +5,7 @@
 <div class="row no-gutters" style="height: 100vh" >
     <div style="background-color: blue" class="col-12 col-md-6">
         <h1>{{current_user.username}}</h1>
-        <img class="w-100" src="../../../../static/img/No-profile.jpg" alt="User Profile Picture">
+        <img class="w-100" src="/static/img/No-profile.jpg" alt="User Profile Picture">
     </div>
 
     <div style="background-color: black; text-align: center;" class="col-12 col-md-6 justify-content-center">
@@ -19,7 +19,7 @@
               </ul>
         </div>
 
-        <a href="{{ url_for('games.new_game_page') }}" class="btn btn-primary" >New Game</a>
+        <a href="{{ url_for('games.new') }}" class="btn btn-primary" >New Game</a>
 
     </div>
 
