--- a/web_app/templates/_layout.html
+++ b/web_app/templates/_layout.html
@@ -44,7 +44,7 @@
                       </a>
                     </li>
                     <li class="nav-item">
-                      <a href={{ url_for('users.user_profile_page', username=current_user.username)}} class="nav-link">
+                      <a href={{ url_for('users.show', username=current_user.username)}} class="nav-link">
                         Profile
                       </a>
                     </li>
@@ -56,7 +56,7 @@
                   
                   {% else %}
                     <li class="nav-item">
-                      <a href="/users/register" class="nav-link">
+                      <a href="/users/new" class="nav-link">
                         Register
                       </a>
                     </li>
