--- a/web_app/blueprints/rounds/templates/rounds/index.html
+++ b/web_app/blueprints/rounds/templates/rounds/index.html
@@ -28,6 +28,7 @@ Battle History
         </div>
         <div class="card-footer d-flex flex-row-reverse">
             <form action={{ url_for('rounds.show', game_id=game.id, round_id=round.id)}} method="GET">
+                <input type='hidden' name='round_num' value="{{ loop.index0 + 1}}" />
                 <input type='submit' class='btn btn-info' value="View Round">
             </form>
             
